boltffi_tests/fixtures/negative_scanner/closure_record_field.rs
#[data]
pub struct Handler {
    pub callback: Box<dyn Fn(u32)>,
}
